refactor: remove mcpserver part
