# src/assets/swagger/onecx-ai-provider-bff.yaml
@@ -411,31 +411,6 @@ paths:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         "404":
           description: MCP Server not found
-  /mcpServers/{id}/health:
-    get:
-      x-onecx:
-        permissions:
-          mcpServer:
-            - read
-      tags:
-        - mcpServer
-      description: Return MCP Server health status by its ID
-      operationId: getMCPServerHealthStatus
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MCPServerHealthStatus'
-        "404":
-          description: Not found
   /mcpServers/search:
     post:
       x-onecx:
@@ -879,16 +854,6 @@ components:
         message:
           type: string
     ProviderHealthStatus:
-      type: object
-      properties:
-        status:
-          type: string
-          enum:
-            - HEALTHY
-            - UNHEALTHY
-        checkedAt:
-          $ref: '#/components/schemas/OffsetDateTime'
-    MCPServerHealthStatus:
       type: object
       properties:
         status:
